<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Soccer</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_anadir_jugador">New player</string>
    <string name="title_activity_agregar">Add</string>
    <string name="action_settings">Settings</string>
    <string name="anadirJugador">New player</string>
    <string name="aceptar">Accept</string>
    <string name="hNombre">Name: </string>
    <string name="hTelefono">Phone: </string>
    <string name="hFecha">Date of birth:: </string>
    <string name="jugador_insertado">Player add</string>
    <string name="partido_insertado">Match add</string>
    <string name="title_activity_secundaria">Second</string>
    <string name="idjugador">Id. Player:</string>
    <string name="contrincante">Opponent:</string>
    <string name="valoracion">Score:</string>
    <string name="title_activity_agregar_partido">New match</string>
    <string name="agregar_partido">Add match</string>
    <string name="borrar_jugador">Delete player?</string>
    <string name="media">Average:</string>
</resources>
