<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.izv.angel.updatesqlite.Agregar"
    android:background="@drawable/ic_fondojugador2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/anadirJugador"
        android:id="@+id/tvTitulo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etNombre"
        android:layout_marginTop="18dp"
        android:hint="@string/hNombre"
        android:gravity="center_horizontal"
        android:layout_below="@+id/tvTitulo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/etTelef"
        android:layout_below="@+id/etNombre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:hint="@string/hTelefono"
        android:gravity="center_horizontal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etFnac"
        android:layout_marginTop="18dp"
        android:hint="@string/hFecha"
        android:gravity="center_horizontal"
        android:layout_below="@+id/etTelef"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:id="@+id/button"
        android:onClick="agregarJugador"

        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/etFnac"
        android:layout_alignEnd="@+id/etFnac" />

</RelativeLayout>
